feat: rebrand to red theme, enhance document management and Docker config
- Change brand color from WeChat green to red theme
- Add document duplicate, rename, and restore functionality
- Improve editor save logic before document switching
- Add Procfile for deployment
- Add PWA icons (favicon, apple-touch-icon, icon-512)
- Update Docker configuration and production settings
- Update Puma and route configurations
- Update app name and branding across views

Co-authored-by: haozan <haozanlawyer@gmail.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -11,6 +11,10 @@
 /.env*
 !/.env*.erb
 
+# Ignore local config files (will be generated from .example files in container)
+/config/application.yml
+/config/database.yml
+
 # Ignore all default key files.
 /config/master.key
 /config/credentials/*.key
