--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "markdown-it": "^14.1.0",
     "markdown-it-deflist": "^3.0.0",
     "markdown-it-emoji": "^3.0.0",
+    "markdown-it-footnote": "^4.0.0",
     "markdown-it-implicit-figures": "^0.12.0",
     "markdown-it-mark": "^4.0.0",
     "markdown-it-ruby": "^1.1.2",
