feat: implement short URL system for ActiveStorage files
- Add short_code column to active_storage_blobs with unique index
- Create ShortCode concern for base62 encoding/decoding
- Implement FilesController for short URL redirects
- Add helper methods for generating short URLs in views
- Update upload services to return short URLs
- Add comprehensive documentation and tests
- Route: GET /f/:id redirects to blob with proper content disposition

Co-authored-by: haozan <haozanlawyer@gmail.com>

--- a/config/storage.yml
+++ b/config/storage.yml
@@ -26,3 +26,6 @@ qiniu:
   region: <%= ENV.fetch("QINIU_REGION", "cn-east-1") %>
   bucket: <%= ENV.fetch("QINIU_BUCKET", "") %>
   force_path_style: true
+  # 如果配置了 QINIU_CDN_HOST，将使用 CDN 域名直接访问（需要在七牛云绑定自定义域名）
+  # 格式: https://cdn.yourdomain.com
+  public: <%= ENV.fetch("QINIU_PUBLIC", "false") == "true" %>
